# xoshiro

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  index.d.ts  index.js  package-lock.json  package.json
.github/workflow/: nodejs.yml
src/: lib.c  library.c  libxoshiro.c  libxoshiro.h
test/: xoshiro.js  xoshiro.test.js
